force-app/main/default/objects/Product_Availability__c/Product_Availability__c.object-meta.xml
<CustomObject>
    <label>Product Availability</label>
    <nameField>
        <label>Product Availability</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>