force-app/main/default/objects/Product_Availability__c/fields/Allow_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Allow_Purchase__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this Business Unit can purchase this product.</description>
    <label>Allow Purchase</label>
    <type>Checkbox</type>
</CustomField>