force-app/main/default/objects/Product_Availability__c/fields/Allow_Sell__c.field-meta.xml
<CustomField>
    <fullName>Allow_Sell__c</fullName>
    <description>Whether this Business Unit can sell this product.</description>
    <defaultValue>true</defaultValue>
    <label>Allow Sell</label>
    <type>Checkbox</type>
</CustomField>