force-app/main/default/objects/Product_Availability__c/fields/Auto_Create_Sourcing_Options__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Sourcing_Options__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this Product Availability record can auto-create sourcing options for this product via Apex.</description>
    <label>Auto Create Sourcing Options</label>
    <type>Checkbox</type>
</CustomField>