force-app/main/default/objects/Product_Availability__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Product Availability</relationshipLabel>
    <relationshipName>Business_Unit_Product_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>