force-app/main/default/objects/Product_Availability__c/fields/Default_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Default_Pricebook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Business Unit Products</relationshipLabel>
    <relationshipName>Default_Pricebook_Business_Unit_Products</relationshipName>
    <type>Lookup</type>
</CustomField>